2010-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	Add a new field `location' to bookmarks for non-file bookmarks.
	* bookmark.el (bookmark-location): Use the new field, if present.
	(bookmark-insert-location): Undo last change, not needed any more.
	* man.el (Man-bookmark-make-record):
	* woman.el (woman-bookmark-make-record): Add `location' field.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* simple.el (scroll-error-top-bottom): New defcustom.
	(scroll-up-command, scroll-down-command): Use it.  Doc fix.

	* emulation/pc-select.el (pc-select-override-scroll-error):
	Obsolete in favor of `scroll-error-top-bottom'.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* tutorial.el (tutorial--default-keys): Rebind `C-v' to
	`scroll-up-command' and `M-v' to `scroll-down-command'.

	* emulation/cua-rect.el (cua--init-rectangles):
	* forms.el (forms--change-commands):
	* image-mode.el (image-mode-map):
	Remap scroll-down-command and scroll-up-command
	in addition to scroll-down and scroll-up.

2010-04-14  Juri Linkov  <juri@jurta.org>

	* mwheel.el (scroll-preserve-screen-position-commands):
	Add mwheel-scroll to this list of commands.

	* simple.el (scroll-preserve-screen-position-commands):
	Add scroll-up-command, scroll-down-command, scroll-up-line,
	scroll-down-line to this list of commands.

2010-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* obsolete/complete.el: Move from lisp/complete.el.

	* pcomplete.el (pcomplete-here*): Fix mistaken change (bug#5935).

	* emacs-lisp/easy-mmode.el (define-minor-mode): Passing a nil argument
	to the minor mode function now turns the mode ON unconditionally.

2010-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-dir.el (vc-dir-kill-line): New command.
	(vc-dir-mode-map): Bind it to C-k.

	* bookmark.el (bookmark-insert-location): Handle a nil filename.

	* woman.el: Add bookmark declarations to silence the compiler.
	(bookmark-prop-get): Use `man-args' rather than `filename' as a first